@@ -1,5 +1,10 @@
 2013-12-23  Mark Wielaard  <mjw@redhat.com>
 
+	* dwfl_segment_report_module.c (dwfl_segment_report_module): Free
+	build_id before returning early.
+
+2013-12-23  Mark Wielaard  <mjw@redhat.com>
+
 	* linux-pid-attach.c (__libdwfl_attach_state_for_pid): Report actual
 	pid (thread group leader) to dwfl_attach_state.
 
